--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -384,11 +384,11 @@
     <string name="text">Tekst</string>
 
     <!-- Recycle Bin -->
-    <string name="restore_this_file">Restore this file</string>
-    <string name="restore_selected_files">Restore selected files</string>
-    <string name="restore_all_files">Restore all files</string>
-    <string name="recycle_bin_emptied">The Recycle Bin has been emptied successfully</string>
-    <string name="files_restored_successfully">Files have been restored successfully</string>
+    <string name="restore_this_file">Bestand herstellen</string>
+    <string name="restore_selected_files">Selectie herstellen</string>
+    <string name="restore_all_files">Alles herstellen</string>
+    <string name="recycle_bin_emptied">Prullenbak is geleegd</string>
+    <string name="files_restored_successfully">Bestanden zijn hersteld</string>
 
     <!-- Import / Export -->
     <string name="importing">Importeren…</string>
