--- a/commons/src/main/res/values-az/strings.xml
+++ b/commons/src/main/res/values-az/strings.xml
@@ -15,7 +15,7 @@
     <string name="never">Heç vaxt</string>
     <string name="details">Detallar</string>
     <string name="notes">Qeydlər</string>
-    <string name="deleting_folder">Deleting folder \'%s\'</string>
+    <string name="deleting_folder">\'%s\' qovluğu silinir</string>
 
     <!-- Favorites -->
     <string name="favorites">Sevimlilər</string>
@@ -179,7 +179,7 @@
 
     <!-- What's new -->
     <string name="whats_new">Yeni nə var</string>
-    <string name="whats_new_disclaimer">* burada yalnız böyük təzələmələr sıralanıb, həmişə kiçik yaxşılaşdırmalar da olur</string>
+    <string name="whats_new_disclaimer">* burada yalnız böyük təzələmələr sıralanıb, həmişə əlavə yeniliklər də olur/string>
 
     <!-- Actionbar items -->
     <string name="delete">Sil</string>
@@ -195,7 +195,7 @@
     <string name="temporarily_show_hidden">Gizlənmişi müvəqqəti göstər</string>
     <string name="stop_showing_hidden">Gizlənmiş mediyanı göstərmə</string>
     <string name="maximum_share_reached">Bu qədər faylı bir dəfəyə paylaşa bilməzsiniz</string>
-    <string name="empty_and_disable_recycle_bin">Empty and disable the Recycle Bin</string>
+    <string name="empty_and_disable_recycle_bin">Zibil qutusunu boşalt və qapat</string>
 
     <!-- Sorting -->
     <string name="sort_by">Sırala</string>
@@ -214,15 +214,15 @@
     <string name="proceed_with_deletion">Silmə prosesini təsdiqləyirsiniz?</string>
     <string name="deletion_confirmation">%s faylı silmək istdəyinizə əminsiniz?</string>    <!-- Are you sure you want to delete 5 items? -->
     <string name="move_to_recycle_bin_confirmation">%s\'i zibil qutusuna atmaq istədiyinizə əminsiniz?</string>    <!-- Are you sure you want to move 3 items into the Recycle Bin? -->
-    <string name="are_you_sure_delete">Are you sure you want to delete this item?</string>
-    <string name="are_you_sure_recycle_bin">Are you sure you want to move this item into the Recycle Bin?</string>
+    <string name="are_you_sure_delete">Faylı silmək istədiyinizə əminsiniz?</string>
+    <string name="are_you_sure_recycle_bin">Bu faylı zibil qutusuna atmaq istədiyinizə əminsiniz?</string>
     <string name="do_not_ask_again">Bu oturumda birdə soruşma</string>
     <string name="yes">Bəli</string>
     <string name="no">Xeyr</string>
 
     <plurals name="delete_warning">
-        <item quantity="one">WARNING: You are deleting a folder</item>
-        <item quantity="other">WARNING: You are deleting %d folders</item>
+        <item quantity="one">XƏBƏRDARLIQ: Qovluğu silirsiniz</item>
+        <item quantity="other">XƏBƏRDARLIQ: %d sayda qovluğu silirsiniz</item>
     </plurals>
 
     <!-- Password protection -->
@@ -246,8 +246,8 @@
     <string name="fingerprint_setup_successfully">Qoruma təyini uğurludur. Əgər təzələmə problemi yaşasanız, tətbiqi yenidən yükləyin.</string>
 
     <!-- Times -->
-    <string name="yesterday">Yesterday</string>
-    <string name="today">Today</string>
+    <string name="yesterday">Dünən</string>
+    <string name="today">Bugün</string>
     <string name="tomorrow">Sabah</string>
     <string name="seconds_raw">saniyələr</string>
     <string name="minutes_raw">dəqiqələr</string>
@@ -357,23 +357,23 @@
     <string name="medium">Orta</string>
     <string name="large">Böyük</string>
     <string name="extra_large">Çox böyük</string>
-    <string name="password_protect_hidden_items">Password protect hidden item visibility</string>
-    <string name="password_protect_whole_app">Password protect the whole application</string>
+    <string name="password_protect_hidden_items">Şifrə gizlənmiş tətbiqin görünürlüyünü qoruyur</string>
+    <string name="password_protect_whole_app">Şifrə bütün tətbiqi qoruyur</string>
     <string name="keep_last_modified">Keep old last-modified value at file copy/move/rename</string>
     <string name="show_info_bubble">Show an info bubble at scrolling items by scrollbar dragging</string>
     <string name="prevent_phone_from_sleeping">Prevent phone from sleeping while the app is in foreground</string>
-    <string name="skip_delete_confirmation">Always skip delete confirmation dialog</string>
-    <string name="enable_pull_to_refresh">Enable pull-to-refresh from the top</string>
-    <string name="use_24_hour_time_format">Use 24-hour time format</string>
-    <string name="sunday_first">Start week on Sunday</string>
-    <string name="widgets">Widgets</string>
-    <string name="use_same_snooze">Always use same snooze time</string>
-    <string name="snooze_time">Snooze time</string>
-    <string name="vibrate_on_button_press">Vibrate on button press</string>
-    <string name="move_items_into_recycle_bin">Move items into the Recycle Bin instead of deleting</string>
-    <string name="recycle_bin_cleaning_interval">Recycle Bin cleaning interval</string>
-    <string name="empty_recycle_bin">Empty the Recycle Bin</string>
-    <string name="force_portrait_mode">Force portrait mode</string>
+    <string name="skip_delete_confirmation">Silmə təsdiq dialoqunu göstərmə</string>
+    <string name="enable_pull_to_refresh">Yuxarıdan çək-təzələ'ni aç</string>
+    <string name="use_24_hour_time_format">24 saat formatından istifadə et</string>
+    <string name="sunday_first">Həftəyə Bazar Ertəsindən başla</string>
+    <string name="widgets">Widgetlər</string>
+    <string name="use_same_snooze">Həmişə eyni yuxu intervalından istifadə et</string>
+    <string name="snooze_time">Yuxu intervalı</string>
+    <string name="vibrate_on_button_press">Düyməyə toxunduqda titrə</string>
+    <string name="move_items_into_recycle_bin">Faylları silməkdənsə Zibil qutusuna at</string>
+    <string name="recycle_bin_cleaning_interval">Zibil qutusu təmizlik intervalı</string>
+    <string name="empty_recycle_bin">Zibil qutusunu boşalt</string>
+    <string name="force_portrait_mode">Portret moduna zorla</string>
 
     <!-- Setting sections -->
     <string name="visibility">Görünürlük</string>
@@ -386,13 +386,13 @@
     <string name="text">Mətn</string>
 
     <!-- Recycle Bin -->
-    <string name="restore_this_file">Restore this file</string>
-    <string name="restore_selected_files">Restore selected files</string>
-    <string name="restore_all_files">Restore all files</string>
-    <string name="recycle_bin_emptied">The Recycle Bin has been emptied successfully</string>
-    <string name="files_restored_successfully">Files have been restored successfully</string>
-    <string name="empty_recycle_bin_confirmation">Are you sure you want to empty the Recycle Bin? The files will be permanently lost.</string>
-    <string name="recycle_bin_empty">The Recycle Bin is empty</string>
+    <string name="restore_this_file">Bu faylı geri qaytar</string>
+    <string name="restore_selected_files">Bu faylları geri qaytar</string>
+    <string name="restore_all_files">Bütün faylları geri qaytar</string>
+    <string name="recycle_bin_emptied">Zibil qutusu uğurla boşaldıldı</string>
+    <string name="files_restored_successfully">Fayllar uğurla geri qaytarıldı</string>
+    <string name="empty_recycle_bin_confirmation">Zibil qutusunu boşaltmaq istədiyinizə əminsiniz? Fayllar tamamilə itiriləcək.</string>
+    <string name="recycle_bin_empty">Zibil qutusu boşdur</string>
 
     <!-- Import / Export -->
     <string name="importing">Daxil edilir…</string>
