--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -18,9 +18,9 @@
     <string name="deleting_folder">資料夾 \'%s\' 刪除中</string>
     <string name="none">無</string>
     <string name="label">標籤</string>
-    <string name="transparent">Transparent</string>
-    <string name="transparent_color">Transparent color</string>
-    <string name="select_a_different_color">Select a different color</string>
+    <string name="transparent">透明</string>
+    <string name="transparent_color">透明色彩</string>
+    <string name="select_a_different_color">選取不同的顏色</string>
 
     <!-- Favorites -->
     <string name="favorites">我的最愛</string>
@@ -58,8 +58,8 @@
     <string name="filename_invalid_characters_placeholder">檔名 \'%s\' 包含無效字元</string>
     <string name="extension_cannot_be_empty">副檔名不得空白</string>
     <string name="source_file_doesnt_exist">原始檔案 %s 不存在</string>
-    <string name="prepend_filenames">Prepend filenames</string>
-    <string name="append_filenames">Append filenames (before file extension)</string>
+    <string name="prepend_filenames">檔名前綴</string>
+    <string name="append_filenames">附加檔名（在副檔名前）</string>
 
     <!-- Copy / Move -->
     <string name="copy">複製</string>
@@ -414,7 +414,7 @@
     <string name="files_restored_successfully">檔案已成功還原</string>
     <string name="empty_recycle_bin_confirmation">你確定要清空回收桶嗎?檔案將會永久消失。</string>
     <string name="recycle_bin_empty">回收桶是空的</string>
-    <string name="moving_recycle_bin_items_disabled">Moving Recycle bin items is disabled, please use Restore</string>
+    <string name="moving_recycle_bin_items_disabled">移動回收桶項目的功能已停用，請使用復原</string>
  
     <plurals name="moving_items_into_bin">
         <item quantity="one">正在移動%d個項目進回收桶</item>
@@ -490,10 +490,10 @@
     <string name="sunday_short">週日</string>
 
     <!-- Pro version -->
-    <string name="upgrade_to_pro">This version of the app is no longer maintained. Please upgrade to the Pro version.</string>
-    <string name="it_is_free">It is free till: %s</string>
-    <string name="more_info">More info</string>
-    <string name="upgrade">Upgrade</string>
+    <string name="upgrade_to_pro">此版本的應用程式已不再維護。請升級到專業版。</string>
+    <string name="it_is_free">它在此日期前免費：%s</string>
+    <string name="more_info">更多資訊</string>
+    <string name="upgrade">升級</string>
 
     <!-- About -->
     <string name="about">關於</string>
@@ -504,7 +504,7 @@
     <string name="invite_friends_underlined"><u>邀請朋友</u></string>
     <string name="share_text">嘿，來試試看「%1$s」吧！ %2$s</string>
     <string name="invite_via">邀請</string>
-    <string name="rate_us_underlined"><u>評分我們</u></string>
+    <string name="rate_us_underlined"><u>為我們評分</u></string>
     <string name="donate">捐贈</string>
     <string name="donate_underlined"><u>捐贈</u></string>
     <string name="follow_us">追蹤我們</string>
@@ -554,27 +554,27 @@
     <!-- License -->
     <string name="notice">這程式使用了下列的第三方函式庫來讓我工作簡化。感謝。</string>
     <string name="third_party_licences">第三方授權</string>
-    <string name="kotlin_title">Kotlin (programming language)</string>
-    <string name="subsampling_title">Subsampling Scale Image View (zoomable imageviews)</string>
-    <string name="glide_title">Glide (image loading and caching)</string>
-    <string name="picasso_title">Picasso (image loading and caching)</string>
-    <string name="cropper_title">Android Image Cropper (image crop and rotate)</string>
-    <string name="rtl_viewpager_title">RtlViewPager (right to left swiping)</string>
-    <string name="joda_title">Joda-Time (Java date replacement)</string>
-    <string name="stetho_title">Stetho (debugging databases)</string>
-    <string name="otto_title">Otto (event bus)</string>
-    <string name="photoview_title">PhotoView (zoomable GIFs)</string>
-    <string name="pattern_title">PatternLockView (pattern protection)</string>
-    <string name="reprint_title">Reprint (fingerprint protection)</string>
-    <string name="gif_drawable_title">Gif Drawable (loading GIFs)</string>
-    <string name="autofittextview_title">AutoFitTextView (resizing text)</string>
-    <string name="robolectric_title">Robolectric (testing framework)</string>
-    <string name="espresso_title">Espresso (testing helper)</string>
-    <string name="gson_title">Gson (JSON parser)</string>
-    <string name="leak_canary_title">Leak Canary (memory leak detector)</string>
-    <string name="number_picker_title">Number Picker (customizable number picker)</string>
-    <string name="exoplayer_title">ExoPlayer (video player)</string>
-    <string name="panorama_view_title">VR Panorama View (displaying panoramas)</string>
-    <string name="sanselan_title">Apache Sanselan (reading image metadata)</string>
-    <string name="filters_title">Android Photo Filters (image filters)</string>
+    <string name="kotlin_title">Kotlin（程式語言）</string>
+    <string name="subsampling_title">Subsampling Scale Image View（可縮放圖片檢視）</string>
+    <string name="glide_title">Glide（圖片載入與快取）</string>
+    <string name="picasso_title">Picasso（圖片載入與快取）</string>
+    <string name="cropper_title">Android Image Cropper（圖片裁切與旋轉）</string>
+    <string name="rtl_viewpager_title">RtlViewPager（由右向左滑）</string>
+    <string name="joda_title">Joda-Time（Java 日期取代）</string>
+    <string name="stetho_title">Stetho（除錯資料庫）</string>
+    <string name="otto_title">Otto（事件匯流排）</string>
+    <string name="photoview_title">PhotoView（可縮放的 GIF）</string>
+    <string name="pattern_title">PatternLockView（模式保護）</string>
+    <string name="reprint_title">Reprint（指紋保護）</string>
+    <string name="gif_drawable_title">Gif Drawable（載入 GIF）</string>
+    <string name="autofittextview_title">AutoFitTextView（調整文字大小）</string>
+    <string name="robolectric_title">Robolectric（測試框架）</string>
+    <string name="espresso_title">Espresso（測試助理程式）</string>
+    <string name="gson_title">Gson（JSON 解析器）</string>
+    <string name="leak_canary_title">Leak Canary（記憶體洩露偵測器）</string>
+    <string name="number_picker_title">Number Picker（可自訂的號碼挑選器）</string>
+    <string name="exoplayer_title">ExoPlayer（影片播放器）</string>
+    <string name="panorama_view_title">VR Panorama View（顯示全景）</string>
+    <string name="sanselan_title">Apache Sanselan（讀取圖片詮釋資料）</string>
+    <string name="filters_title">Android Photo Filters（圖片過濾器）</string>
 </resources>
