--- a/commons/src/main/res/values-hu/strings.xml
+++ b/commons/src/main/res/values-hu/strings.xml
@@ -500,7 +500,7 @@
     <string name="about">Névjegy</string>
     <string name="website_label">A forráskódok megtekintéséhez</string>
     <string name="email_label">Küldje el visszajelzését vagy javaslatait</string>
-    <string name="upgrade_to_pro_underlined"><u>Upgrade to Pro</u></string>
+    <string name="upgrade_to_pro_underlined"><u>Frissítés Pro verzióra</u></string>
     <string name="more_apps_underlined"><u>További alkalmazások</u></string>
     <string name="third_party_licences_underlined"><u>Harmadik fél licencek</u></string>
     <string name="invite_friends_underlined"><u>Barátok meghívása</u></string>
