--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -102,7 +102,7 @@
     <string name="file_already_exists_overwrite">檔案 \"%s\" 已經存在。 要覆蓋嗎?</string>
     <string name="folder_already_exists">資料夾 \"%s\" 已經存在</string>
     <string name="merge">合併</string>
-    <string name="keep_both">Keep both</string>
+    <string name="keep_both">雙方皆保留</string>
     <string name="overwrite">覆蓋</string>
     <string name="skip">跳過</string>
     <string name="append">附加 \'_1\'</string>
@@ -500,7 +500,7 @@
     <string name="about">關於</string>
     <string name="website_label">觀看原始碼</string>
     <string name="email_label">傳送您的反饋或建議</string>
-    <string name="upgrade_to_pro">Upgrade to Pro</string>
+    <string name="upgrade_to_pro">升級至專業版</string>
     <string name="more_apps_underlined"><u>更多應用程式</u></string>
     <string name="third_party_licences_underlined"><u>第三方授權</u></string>
     <string name="invite_friends_underlined"><u>邀請朋友</u></string>
