--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -513,10 +513,10 @@
     <string name="sunday_short">вс</string>
 
     <!-- Pro version -->
-    <string name="upgrade_to_pro_long">This version of the app is no longer maintained. Please upgrade to the Pro version.</string>
-    <string name="it_is_free">It is free till: %s</string>
-    <string name="more_info">More info</string>
-    <string name="upgrade">Upgrade</string>
+    <string name="upgrade_to_pro_long">Данная версия приложения больше не поддерживается. Обновите версию на «Pro».</string>
+    <string name="it_is_free">Это бесплатно до: %s</string>
+    <string name="more_info">Подробнее</string>
+    <string name="upgrade">Обновить</string>
 
     <!-- About -->
     <string name="about">О приложении</string>
