--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -492,7 +492,7 @@
 
     <!-- Pro version -->
     <string name="upgrade_to_pro_long">Deze versie wordt niet langer doorontwikkeld. Overweeg te upgraden naar de Pro-versie.</string>
-    <string name="it_is_free">Gratis tot: %s. If you download it till then, you will be able to use it for free forever.</string>
+    <string name="it_is_free">Gratis tot: %s. Bij het downloaden vóór deze datum blijft deze versie altijd gratis te gebruiken.</string>
     <string name="more_info">Meer informatie</string>
     <string name="upgrade">Upgraden</string>
 
