--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -492,7 +492,7 @@
 
     <!-- Pro version -->
     <string name="upgrade_to_pro_long">Questa versione dell\'applicazione non è più supportata. Aggiornarla alla versione Pro.</string>
-    <string name="it_is_free">È gratuita fino a: %s. If you download it till then, you will be able to use it for free forever.</string>
+    <string name="it_is_free">È gratuita fino a: %s. Se la scarichi entro quella data, essa sarà gratuita per sempre.</string>
     <string name="more_info">Maggiori informazioni</string>
     <string name="upgrade">Aggiorna</string>
 
