--- a/commons/src/main/res/values-pt/strings.xml
+++ b/commons/src/main/res/values-pt/strings.xml
@@ -18,9 +18,9 @@
     <string name="deleting_folder">A apagar a pasta \'%s\'</string>
     <string name="none">Nenhuma</string>
     <string name="label">Etiqueta</string>
-    <string name="transparent">Transparent</string>
-    <string name="transparent_color">Transparent color</string>
-    <string name="select_a_different_color">Select a different color</string>
+    <string name="transparent">Transparente</string>
+    <string name="transparent_color">Cor transparente</string>
+    <string name="select_a_different_color">Selecione uma cor diferente</string>
 
     <!-- Favorites -->
     <string name="favorites">Favoritos</string>
@@ -58,8 +58,8 @@
     <string name="filename_invalid_characters_placeholder">O nome \'%s\' contém caracteres inválidos</string>
     <string name="extension_cannot_be_empty">A extensão não pode estar vazia</string>
     <string name="source_file_doesnt_exist">O ficheiro de origem %s não existe</string>
-    <string name="prepend_filenames">Prepend filenames</string>
-    <string name="append_filenames">Append filenames (before file extension)</string>
+    <string name="prepend_filenames">Introduzir antes do nome do ficheiro</string>
+    <string name="append_filenames">Introduzir depois do nome do ficheiro (e antes da extensão)</string>
 
     <!-- Copy / Move -->
     <string name="copy">Copiar</string>
@@ -102,7 +102,7 @@
     <string name="file_already_exists_overwrite">Já existe um ficheiro com o nome \"%s\". Substituir?</string>
     <string name="folder_already_exists">Já existe uma pasta com o nome \"%s\"</string>
     <string name="merge">Unir</string>
-    <string name="keep_both">Keep both</string>
+    <string name="keep_both">Mnater ambos</string>
     <string name="overwrite">Substituir</string>
     <string name="skip">Ignorar</string>
     <string name="append">Anexar \'_1\'</string>
@@ -223,8 +223,8 @@
     <string name="title">Título</string>
     <string name="filename">Nome do ficheiro</string>
     <string name="extension">Extensão</string>
-    <string name="random">Random</string>
-    <string name="sort_randomly">Sort randomly</string>
+    <string name="random">Aleatório</string>
+    <string name="sort_randomly">Ordenação aleatória</string>
     <string name="ascending">Ascendente</string>
     <string name="descending">Descendente</string>
     <string name="use_for_this_folder">Apenas para esta pasta</string>
@@ -380,7 +380,7 @@
     <string name="extra_large">Muito grande</string>
     <string name="password_protect_hidden_items">Proteger itens ocultos com palavra-passe</string>
     <string name="password_protect_whole_app">Proteger aplicação com palavra-passe</string>
-    <string name="password_protect_file_deletion">Password protect file deletion and moving</string>
+    <string name="password_protect_file_deletion">Impedir eliminação e movimentação de ficheiros com palavra-passe</string>
     <string name="keep_last_modified">Manter dados da última modificação ao copiar/mover/renomear</string>
     <string name="show_info_bubble">Mostrar informação ao arrastar a barra de deslocamento</string>
     <string name="prevent_phone_from_sleeping">Impedir adormecimento do dispositivo se a aplicação estiver em segundo plano</string>
@@ -415,7 +415,7 @@
     <string name="files_restored_successfully">Os ficheiros foram restaurados</string>
     <string name="empty_recycle_bin_confirmation">Tem a certeza de que deseja esvaziar a reciclagem? Todos os itens serão apagados permanentemente.</string>
     <string name="recycle_bin_empty">A reciclagem está vazia</string>
-    <string name="moving_recycle_bin_items_disabled">Moving Recycle bin items is disabled, please use Restore</string>
+    <string name="moving_recycle_bin_items_disabled">Não é possível mover itens para fora da Reciclagem, utilize a opção Restaurar</string>
 
     <plurals name="moving_items_into_bin">
         <item quantity="one">A mover %d item para a reciclagem</item>
@@ -491,16 +491,16 @@
     <string name="sunday_short">dom</string>
 
     <!-- Pro version -->
-    <string name="upgrade_to_pro_long">This version of the app is no longer maintained. Please upgrade to the Pro version.</string>
-    <string name="it_is_free">It is free till: %s. If you download it till then, you will be able to use it for free forever.</string>
-    <string name="more_info">More info</string>
-    <string name="upgrade">Upgrade</string>
+    <string name="upgrade_to_pro_long">Esta versão da aplicação já não é suportada. Por favor atualize para a versão Pro.</string>
+    <string name="it_is_free">É gratuita até: %s. Se a descarregar até esta data, será sua para sempre.</string>
+    <string name="more_info">Mais informação</string>
+    <string name="upgrade">Atualizar</string>
 
     <!-- About -->
     <string name="about">Acerca</string>
     <string name="website_label">Mais aplicações Simple e código fonte em</string>
     <string name="email_label">Envie os seus comentários ou sugestões para</string>
-    <string name="upgrade_to_pro">Upgrade to Pro</string>
+    <string name="upgrade_to_pro">Atualizar para Pro</string>
     <string name="more_apps_underlined"><u>Mais aplicações</u></string>
     <string name="third_party_licences_underlined"><u>Licenças de terceiros</u></string>
     <string name="invite_friends_underlined"><u>Convidar amigos</u></string>
